Remove 100vh from body, use absolute for footer to fix header collapse

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -454,11 +454,11 @@ button {
 }
 
 .relative {
-  position: relative;
+  position: relative
 }
 
 .fixed {
-  position: fixed;
+  position: fixed
 }
 
 /* END OF TAILWIND */
@@ -479,7 +479,7 @@ html {
   font-variant-ligatures: normal;
   font-variant-numeric: normal;
   font-variant-position: normal;
-  font-variation-settings: normal;
+  font-variation-settings: normal
 }
 
 body {
@@ -490,30 +490,29 @@ body {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  height: 100vh
 }
 
 header {
   background: rgb(250,250,250);
   padding-top: 17px;
   border-bottom: 1px solid #EBEBEB;
-  height: 119px;
+  height: 119px
 }
 
 nav a {
   text-decoration: none;
-  color: rgb(119, 119, 119);
+  color: rgb(119, 119, 119)
 }
   nav a:hover {
     color: rgba(0, 0, 0, .87)
   }
 
   nav a:active {
-    color: #1A73E8;
+    color: #1A73E8
   }
 
   nav li {
-    padding: 28px 16px 12px;
+    padding: 28px 16px 12px
   }
 
 main {
@@ -524,18 +523,22 @@ main {
 
 footer {
   -ms-flex-negative: 0;
-  flex-shrink: 0
+  flex-shrink: 0;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 a {
-  color: rgb(26, 13, 171);
+  color: rgb(26, 13, 171)
 }
 
 h3 a {
-  text-decoration: none;
+  text-decoration: none
 }
   h3 a:hover {
-    text-decoration: underline;
+    text-decoration: underline
   }
 
 input:focus {
@@ -544,11 +547,11 @@ input:focus {
 
 ol {
   margin-bottom: 0;
-  padding-left: 20px;
+  padding-left: 20px
 }
 
 ol li {
-  line-height: 1.5;
+  line-height: 1.5
 }
 
 
@@ -556,14 +559,14 @@ ol li {
 .active {
   border-bottom: 3px solid rgb(26, 115, 232);
   font-weight: bold;
-  outline-color: rgb(26, 115, 232);
+  outline-color: rgb(26, 115, 232)
 }
   .active a {
-    color: rgb(26, 115, 232);
+    color: rgb(26, 115, 232)
   }
 
   .active a:hover {
-    color: rgb(26, 115, 232);
+    color: rgb(26, 115, 232)
   }
 
 .apps {
@@ -577,9 +580,8 @@ ol li {
   height: 0;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
-
   border-top: 5px solid rgb(0, 102, 33);
-  display: inline-block;
+  display: inline-block
 }
 
 .avatar {
@@ -597,18 +599,18 @@ ol li {
     background: rgb(243,243,243);
     background: radial-gradient(circle, rgba(243,243,243,1) 0%, rgba(241,241,241,1) 100%);
     box-shadow:
-    0 2px 4px 0 rgba(0,0,0,0.10);
+    0 2px 4px 0 rgba(0,0,0,0.10)
   }
 
 .logo {
   display: inline-block;
   position: absolute;
   left: 15px;
-  width: 120px;
+  width: 120px
 }
 
 .microphone {
-  height: 23px;
+  height: 23px
 }
 
 .notifications {
@@ -626,15 +628,15 @@ ol li {
   -o-transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
   width: 484px;
-  border-color: #E4E4E4;
+  border-color: #E4E4E4
 }
   .search:hover {
     -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23)
   }
 
 .tools {
-  padding: 8px 15px;
+  padding: 8px 15px
 }
   .tools:hover {
     border: 1px solid #C6C6C6;
@@ -642,13 +644,13 @@ ol li {
     background: rgb(243,243,243);
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     padding: 7px 14px;
-    position: relative;
+    position: relative
   }
 
   .tools a:hover {
-    color: rgb(119, 119, 119);
+    color: rgb(119, 119, 119)
   }
 
   .tools-parent {
-    padding-bottom: 0;
+    padding-bottom: 0
   }
